k8s-homolog/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: chamados-cematel-homolog
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
