k8s-homolog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helpdesk-backend
  namespace: chamados-cematel-homolog
spec:
  selector:
    app: helpdesk-backend
  ports:
    - port: 80
      targetPort: 8000
