k8s-homolog/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helpdesk-backend-tls
  namespace: chamados-cematel-homolog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # traefik.ingress.kubernetes.io/router.middlewares: chamados-cematel-homolog-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["homolog.cematel.com.br"]
      secretName: homolog-tls
  rules:
    - host: homolog.cematel.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: helpdesk-backend, port: { number: 80 } }
